k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: urlshortener-ingress
  namespace: urlshortener
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "30"
spec:
  ingressClassName: nginx
  rules:
    - host: urlshortener.local
      http:
        paths:
          - path: /u
            pathType: Prefix
            backend:
              service:
                name: go-service
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: python-service
                port:
                  number: 5000
    - http:
        paths:
          - path: /u
            pathType: Prefix
            backend:
              service:
                name: go-service
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: python-service
                port:
                  number: 5000
